# tabflow.ai

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: index.json
docs/adr/: 001-viterbi-fret-assignment.md  002-pymupdf-pdf-rendering.md  003-per-phrase-llm-analysis.md  004-demucs-subprocess-isolation.md
models/: fret_net.pt
tab_ripper/: __init__.py  aligner.py  benchmark.py  cli.py  gp_exporter.py  gp_parser.py  llm_analyzer.py  pdf_renderer.py  separator.py  tab_compare.py  tab_parser.py  tabber.py  technique_detector.py  tempo.py  transcriber.py
tests/: test_llm_analyzer.py  test_tabber.py
training/: dataset.py  ingest_guitar_techs.py  ingest_guitarset.py  models.py  train.py
web/: app.py  config.py  models.py
web/templates/: base.html  dashboard.html  error.html  index.html  job.html  record.html
web/templates/partials/: progress.html
